--- a/master.yaml
+++ b/master.yaml
@@ -24,19 +24,41 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CPU'
-  /os:
-    get:
+
+  /predict/<arg1>/<arg2>/<arg3>/<arg4>/<arg5>/<arg6>/<arg7>/<arg8>/<arg9>/<arg10>/<arg11>/
+	<arg12>/<arg13>/<arg14>/<arg15>/<arg16>/<arg17>/<arg18>/<arg19>/<arg20>/<arg21>/:
+    post:
       tags:
-        - OS
-      operationId: os_pack.cpu_2020.get_os
-      description: Returns cpu information of the hosting server
+        - Upload 
+      operationId: project/prediction.upload
+      description: gets information about fetal patient from user
       responses:
         '200':
-          description: 'OS info, or add more text'
+          description: 'patient information - or verification message'
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CPU'
+                type: float
+	'405': 
+	  description: user error, invalid input
+    get:
+      tags:
+        - Download
+      operationId: project/prediction.download
+      description: allows user to download decision tree with highlighted path for individual path
+      responses:
+        '200':
+          description: 'png file with decision tree'
+          content:
+            application/json:
+              schema:
+                type: object
+		properties:
+		 file:
+		   type: png
+	'405':
+	  description: user error, invalid input
+
 servers:
   - url: 'http://localhost:8080/engr-222'
 components:
