--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-Flask
-connexion[swagger-ui]
+joblib==1.0.1
+numpy==1.20.1
+psutil==5.8.0
+scikit-learn==0.22.2.post1
+scipy==1.6.2
+threadpoolctl==2.1.0
+flask
+connexion
